# book-recommender-lightfm

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  cloudbuild_tests_only.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
loadtest/profile/: ramping.js
model_test/books/: books.parquet  books.pkl  genres_inverted_index.pkl
model_test/item_to_item/: item_to_item_precomputed.parquet  smallify.py
model_test/profile/: dataset.pkl  interactions.pkl  item_features_matrix.pkl  model_info.pkl
src/: config.py  main.py
src/lightapi/: main.py
src/lightfm/: main.py
src/models/: api.py  books_model.py  item_to_item_model.py  profile_model.py  user_to_item_model.py
src/service/: item_to_item.py  profile_service.py  user_to_item.py
test/: conftest.py  test_main.py
tests/: conftest.py  test_main.py  test_profile_service.py  test_user_to_item.py
