[tool.poetry]
name = "lightfm"
version = "0.1.0"
description = "A simple model server for recommending books using LightFM."
authors = ["Dave Fennessey <dave@dfennessey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

